--- a/SMS_Gate/SMS_Gate.csproj
+++ b/SMS_Gate/SMS_Gate.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="GsmModemNetCore" Version="0.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
