--- a/SMS_Gate/appsettings.json
+++ b/SMS_Gate/appsettings.json
@@ -15,6 +15,15 @@
 
   "AppSettings": {
     "Secret": "https://github.com/cornflourblue/aspnet-core-3-jwt-authentication-api/blob/master/appsettings.json",
-    "ComPort": "COM11"
+    "ComPort": "COM14"
+  },
+
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "c:\\Works\\Prep.uz\\SmsSender\\ConsoleApp1\\SmsGatePublish\\self_sing.pfx",
+        "Password": "1234"
+      }
+    }
   }
 }
