--- a/ConsoleApp1/sms_cli.csproj
+++ b/ConsoleApp1/sms_cli.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.IO.Ports" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SMS_Gate\SMS_Gate.csproj" />
+  </ItemGroup>
+
 </Project>
