--- a/SMS_Gate/appsettings.json
+++ b/SMS_Gate/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DataBase.db"
+    "DefaultConnection": "Data Source=c:\\SmsSender\\DataBase.db"
   },
 
   "Logging": {
@@ -15,15 +15,16 @@
 
   "AppSettings": {
     "Secret": "https://github.com/cornflourblue/aspnet-core-3-jwt-authentication-api/blob/master/appsettings.json",
-    "ComPort": "COM14"
+    "ComPort": "COM3"
   },
 
   "Kestrel": {
-    "Certificates": {
-      "Default": {
-        "Path": "c:\\Works\\Prep.uz\\SmsSender\\ConsoleApp1\\SmsGatePublish\\self_sing.pfx",
-        "Password": "1234"
-      }
+    "EndpointDefaults": {
+      "Protocols": "Http1"
     }
+
+
   }
 }
+
+
