--- a/SMS_Gate/SMS_Gate.csproj
+++ b/SMS_Gate/SMS_Gate.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
     <LangVersion>7.1</LangVersion>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
