--- a/SMS_Gate/web.config
+++ b/SMS_Gate/web.config
@@ -5,9 +5,9 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="c:\Works\Prep.uz\SmsSender\ConsoleApp1\SMS_Gate\bin\Debug\netcoreapp3.1\SMS_Gate.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="c:\Works\Prep.uz\SmsSender\ConsoleApp1\SMS_Gate\bin\Release\netcoreapp3.1\SMS_Gate.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
-          <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="50000" />
+          <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="48081" />
         </environmentVariables>
       </aspNetCore>
     </system.webServer>
